In this commit i fixed the navigation
The navigation bar got fixed, but it does not look the same as I wanted because the important things are under it. Now I am going to try to fix them.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,8 +74,7 @@ footer {
     margin: 50px 0px;
   }
   @media only screen and (min-width: 1024px) {
-    #menu{
-        display: contents;
+    .sideNav{
         margin: 0;
       padding: 0;
         height: 100%;
@@ -87,6 +86,10 @@ footer {
       left: 0;
         padding-top: 20px;
       }
+      .sideNav #menu {
+        display: flex;
+        flex-direction: column;
+      }
       #menu a {
         padding: 6px 8px 6px 16px;
         text-decoration: none;
@@ -94,6 +97,9 @@ footer {
         color: whitesmoke;
         display: block;
       }
-      .navbar a.icon {display: none;}
+      #menu a:hover {
+        color: #FE9C00;
+      }
+     .sideNav a.icon {display: none;}
 
   }
